<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/websocketim_colorPrimary"
    android:paddingBottom="40dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="50dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="包包圈"
        android:textColor="@color/socket_title_color_Dark"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/socket_icom_username" />

            <EditText
                android:id="@+id/ed_login_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="18dp"
                android:background="@null"
                android:textCursorDrawable="@drawable/color_cursor"
                android:gravity="center|left|top"
                android:hint="@string/socketim_str_username"
                android:paddingTop="2dp"
                android:singleLine="true"
                android:textColor="@color/socket_title_color_Dark"
                android:textColorHint="@color/websocketim_Dark"
                android:textSize="14sp"
                android:text="4827"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/socket_text_colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/socket_icom_password" />

            <EditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="18dp"
                android:background="@null"
                android:textCursorDrawable="@drawable/color_cursor"
                android:gravity="center|left|top"
                android:hint="@string/socketim_str_password"
                android:inputType="textPassword"
                android:paddingTop="2dp"
                android:singleLine="true"
                android:textColor="@color/socket_title_color_Dark"
                android:textColorHint="@color/websocketim_Dark"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/socket_text_colorPrimary" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/socket_button_heigth"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_button_yellow"
            android:gravity="center"
            android:text="@string/socketim_str_login"
            android:textColor="@color/websocketim_colorPrimaryDark"
            android:textSize="@dimen/socket_button_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/socketim_str_forgot_pwd"
                android:textColor="@color/socket_title_color_Dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_goto_regester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/socketim_str_sign_up_now"
                android:textColor="@color/socket_title_color_Dark"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_centerVertical="true"
                    android:background="@color/socket_text_colorPrimary" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="Or"
                android:textColor="@color/socket_text_colorPrimary"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_centerVertical="true"
                    android:background="@color/socket_text_colorPrimary" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_weixin"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/socket_icom_weixin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_weixin"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/socket_text_colorPrimary"
                    android:text="微信登录"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_phone"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/socket_icom_phone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_phone"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/socket_text_colorPrimary"
                    android:text="手机登录"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>