<?xml version="1.0" encoding="utf-8"?>
<com.websocketim.view.RelativeLayoutHasResizeListener xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/bottom">

        <ListView
            android:id="@+id/chat_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:divider="@null"
            android:dividerHeight="0px"
            android:listSelector="#00000000"
            android:stackFromBottom="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/websocketim_colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/standings_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:src="@drawable/socket_ic_chat_send_trophy" />
            </RelativeLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/socketim_str_standings"
                android:textColor="@color/socket_text_colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/back"
            android:background="@color/websocketim_Dark" />

        <LinearLayout
            android:id="@+id/sound_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:src="@drawable/socket_ic_chat_send_voice" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/socketim_str_voice"
                android:textColor="@color/socket_text_colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/back"
            android:background="@color/websocketim_Dark" />

        <LinearLayout
            android:id="@+id/sendred_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:src="@drawable/socket_ic_chat_send_redpacket" />
            </RelativeLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/socketim_str_send_redpacket"
                android:textColor="@color/socket_text_colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <com.websocketim.view.VoiceRecorderView
        android:id="@+id/voice_recorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</com.websocketim.view.RelativeLayoutHasResizeListener>
